2001-03-28	Joel Sherrill <joel@OARcorp.com>

	* cpu.c: Define fix_syscall_errno() to nothing so MP links.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-02-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Fix the test to determine cpu context size.

2001-02-05	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Added stamp-h.in.

2002-01-23	Ralf Corsepius	<corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge in rtems/Makefile.am and
	rtems/score/Makefile.am. Remove gensize. Require automake-1.5.
	* rtems/Makefile.am: Removed.
	* rtems/score/Makefile.am: Removed.
	* rtems/score/.cvsignore: Add unixsize.h*. Add stamp-h*.
	* configure.ac: Add AM_CONFIG_HEADER(rtems/score/unixsize.h).
	* rtems/score/cpu.h: Replace CPU_CONTEXT_SIZE_IN_BYTES with
	SIZEOF_CPU_CONTEXT.

2001-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add multilib support.

2001-11-28	Joel Sherrill <joel@OARcorp.com>,

	This was tracked as PR91.
	* rtems/score/cpu.h: Added CPU_PROVIDES_ISR_IS_IN_PROGRESS macro which
	is used to specify if the port uses the standard macro for this (FALSE).
	A TRUE setting indicates the port provides its own implementation.

2001-11-28	Joel Sherrill <joel@OARcorp.com>,

	This was tracked as PR91.
	* rtems/score/cpu.h: Added CPU_PROVIDES_ISR_IS_IN_PROGRESS macro which
	is used to specify if the port uses the standard macro for this (FALSE).
	A TRUE setting indicates the port provides its own implementation.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/score/Makefile.am: Use 'PREINSTALL_FILES ='.

2001-05-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
